--- a/app/src/main/assets/webview-test.html
+++ b/app/src/main/assets/webview-test.html
@@ -541,7 +541,7 @@
 <p><strong>4.3.3. 对于用户违反上述使用规范的行为对第三方造成损害的，您需要以自己的名义独立承担法律责任，并应确保绿米免于因此产生损失或增加费用；</strong></p>
 <p><strong>4.3.4．若用户违反有关法律规定或协议约定，使绿米遭受损失，或受到第三方的索赔，或受到行政管理机关的处罚，用户应当赔偿绿米因此造成的损失和（或）发生的费用，包括合理的律师费、调查取证费用。</strong></p>
 <p><strong>五、隐私政策与个人信息保护</strong></p>
-<p>5.1. 保护您的个人信息对绿米很重要。我们将按照我们的隐私政策对您的数据进行收集、使用与保护。您可以在以下网站上查隐私政策的相关信息<a href="http://www.lumiunited.com/docs/Mi_Smart_Motorized_Curtain/Privacy_Policy_Mi_Smart_Motorized_Curtain_CN.pdf">http://www.lumiunited.com/docs/Mi_Smart_Motorized_Curtain/Privacy_Policy_Mi_Smart_Motorized_Curtain_CN.pdf</a>。</p>
+<p>5.1. 保护您的个人信息对绿米很重要。我们将按照我们的隐私政策对您的数据进行收集、使用与保护。您可以在以下网站上查隐私政策的相关信息<a href="https://docs.google.com/viewer?embedded=true&url=http://www.lumiunited.com/docs/Mi_Smart_Motorized_Curtain/Privacy_Policy_Mi_Smart_Motorized_Curtain_CN.pdf">http://www.lumiunited.com/docs/Mi_Smart_Motorized_Curtain/Privacy_Policy_Mi_Smart_Motorized_Curtain_CN.pdf</a>。</p>
 <p>5.1. 保护您的个人信息对绿米很重要。<a href="http://www.baidu.com">http://www.baidu.com</a>。</p>
 <p>5.2. <strong>我们可能不时与小米共享与小米/米家/米兔品牌的产品和服务相关的数据，以提供和改善来自小米和小米生态链的令人兴奋的产品和服务（包括软件、硬件），带来更好的功能和用户体验。</strong></p>
 <p><strong>六、服务风险及免责声明</strong></p>
