完善 webview 支持图片上传

--- a/app/src/main/assets/upload_image.html
+++ b/app/src/main/assets/upload_image.html
@@ -15,12 +15,13 @@
 <body>
 <div align="center">
 	<form action="" enctype="application/x-www-form-urlencoded">
-		文件选择：<input type="file" name="image" /><br><br>
-		多文件选择：<input type="file" name="image" multiple="multiple" /><br><br>
+		文件选择：<input type="file" /><br><br>
+		文件选择2：<input type="file" accept="" /><br><br>
+		多文件选择：<input type="file" multiple="multiple" /><br><br>
 		图片选择：<input type="file" accept="image/*" /><br><br>
 		多图片选择：<input type="file" accept="image/*" multiple="multiple" /><br><br>
 		多种类型文件选择：<input type="file" accept="image/*,audio/mp4,video/mp4" /><br><br>
-		打开相机：<input type="file" accept="image/*" capture="user"><br><br>
+		打开相机：<input type="file" accept="image/*" capture="user" /><br><br>
 		<input type="submit" value="上传图片">
 	</form>
 </div>
