--- a/app/src/main/assets/upload_image.html
+++ b/app/src/main/assets/upload_image.html
@@ -15,13 +15,13 @@
 <body>
 <div align="center">
 	<form action="" enctype="application/x-www-form-urlencoded">
-		文件选择：<input type="file" /><br><br>
-		文件选择2：<input type="file" accept="" /><br><br>
-		多文件选择：<input type="file" multiple="multiple" /><br><br>
-		图片选择：<input type="file" accept="image/*" /><br><br>
-		多图片选择：<input type="file" accept="image/*" multiple="multiple" /><br><br>
-		多种类型文件选择：<input type="file" accept="image/*,audio/mp4,video/mp4" /><br><br>
-		打开相机：<input type="file" accept="image/*" capture="user" /><br><br>
+		1. 文件选择(accept 未传递任何参数)：<input type="file" /><br><br>
+		2. 文件选择(accept 传递*/*)：<input type="file" accept="*/*" /><br><br>
+		3. 文件选择(accept 传递image/*)：<input type="file" accept="image/*" /><br><br>
+		4. 多文件选择：<input type="file" multiple="multiple" /><br><br>
+		5. 文件选择(accept 传递image/*,audio/mp4,video/mp4,application/pdf)：<input type="file" accept="image/*,audio/mp4,video/mp4" /><br><br>
+		6. 文件选择(accept 传递image/* 添加capture属性)：<input type="file" accept="image/*" capture="user" /><br><br>
+		7. 文件选择(accept 传递image/*,video/mp4,application/pdf 添加capture属性)：<input type="file" name="File" accept="image/*,video/mp4,application/pdf" capture="user" /><br><br>
 		<input type="submit" value="上传图片">
 	</form>
 </div>
