完善webview 支持文件选择

--- a/app/src/main/assets/upload_image.html
+++ b/app/src/main/assets/upload_image.html
@@ -19,9 +19,10 @@
 		2. 文件选择(accept 传递*/*)：<input type="file" accept="*/*" /><br><br>
 		3. 文件选择(accept 传递image/*)：<input type="file" accept="image/*" /><br><br>
 		4. 多文件选择：<input type="file" multiple="multiple" /><br><br>
-		5. 文件选择(accept 传递image/*,audio/mp4,video/mp4,application/pdf)：<input type="file" accept="image/*,audio/mp4,video/mp4" /><br><br>
+		5. 文件选择(accept 传递image/*,audio/mp4,video/mp4)：<input type="file" accept="image/*,audio/mp4,video/mp4" /><br><br>
 		6. 文件选择(accept 传递image/* 添加capture属性)：<input type="file" accept="image/*" capture="user" /><br><br>
 		7. 文件选择(accept 传递image/*,video/mp4,application/pdf 添加capture属性)：<input type="file" name="File" accept="image/*,video/mp4,application/pdf" capture="user" /><br><br>
+		8. 文件选择(accept 传递audio/mp4,video/mp4)：<input type="file" accept="audio/mp4,video/mp4" /><br><br>
 		<input type="submit" value="上传图片">
 	</form>
 </div>
