--- a/mymgstudyapp/src/main/assets/upload_image.html
+++ b/mymgstudyapp/src/main/assets/upload_image.html
@@ -1,30 +1,35 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!doctype html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-	<title>上传文件测试</title>
+	<meta charset="utf-8">
 	<style>
-	form {
-		font-size:40px;
-	}
-	input {
-		font-size:40px;
-	}
-</style>
+		.text1 { font-family: AlimamaShuHeiTi-Bold; font-size:60px;}
+		.text2 { font-family: AlimamaFangYuanTiVF-Thin; font-size:60px;}
+		.text3 { font-family: DingTalk_JinBuTi_Regular; font-size:60px;}
+
+		@font-face {
+           font-family: AlimamaShuHeiTi-Bold;
+           src: url('file:///android_asset/fonts/AlimamaShuHeiTi-Bold.ttf');
+		}
+
+		@font-face {
+           font-family: AlimamaFangYuanTiVF-Thin;
+           src: url('file:///android_asset/fonts/AlimamaFangYuanTiVF-Thin.ttf');
+		}
+
+		@font-face {
+		   font-family: DingTalk_JinBuTi_Regular;
+           src: url('file:///android_asset/fonts/DingTalk_JinBuTi_Regular.ttf');
+		}
+
+    </style>
 </head>
-<body>
-<div align="center">
-	<form action="" enctype="application/x-www-form-urlencoded">
-		1. 文件选择(accept 未传递任何参数)：<input type="file" /><br><br>
-		2. 文件选择(accept 传递*/*)：<input type="file" accept="*/*" /><br><br>
-		3. 文件选择(accept 传递image/*)：<input type="file" accept="image/*" /><br><br>
-		4. 多文件选择：<input type="file" multiple="multiple" /><br><br>
-		5. 文件选择(accept 传递image/*,audio/mp4,video/mp4)：<input type="file" accept="image/*,audio/mp4,video/mp4" /><br><br>
-		6. 文件选择(accept 传递image/* 添加capture属性)：<input type="file" accept="image/*" capture="user" /><br><br>
-		7. 文件选择(accept 传递image/*,video/mp4,application/pdf 添加capture属性)：<input type="file" name="File" accept="image/*,video/mp4,application/pdf" capture="user" /><br><br>
-		8. 文件选择(accept 传递audio/mp4,video/mp4)：<input type="file" accept="audio/mp4,video/mp4" /><br><br>
-		<input type="submit" value="上传图片">
-	</form>
-</div>
+
+<body style="background-color: white;">
+
+<p class="text1">AlimamaShuHeiTi-Bold</p>
+<p class="text2">AlimamaFangYuanTiVF-Thin</p>
+<p class="text3">DingTalk_JinBuTi_Regular</p>
+
 </body>
 </html>
